--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>My Portfolio using React</title>
   </head>
   <body>
